--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,9 @@ plugins {
     id 'com.android.application' version '7.1.1' apply false
     id 'com.android.library' version '7.1.1' apply false
 }
-
+ext {
+    roomVersion = '2.4.2'
+}
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
